Minor cleanups + documentation for some main APIs. Adds API call to resource_validation.h that also calls FHIRPath validation Adds API call to json_format.h to print a primitive
PiperOrigin-RevId: 280848996

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -168,6 +168,7 @@ cc_library(
         ":primitive_wrapper",
         ":proto_util",
         ":util",
+        "//cc/google/fhir/fhir_path",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/systems",
