Moves version_config.proto and profile_config.proto out of stu3 directory since they are not version specific.
PiperOrigin-RevId: 281641782

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -274,9 +274,9 @@ cc_library(
         ":util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
+        "//proto:version_config_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:resources_cc_proto",
-        "//proto/stu3:version_config_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
         "@com_google_protobuf//:protobuf",
@@ -666,9 +666,9 @@ cc_test(
     deps = [
         ":core_resource_registry",
         ":proto_util",
+        "//proto:profile_config_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
         "//proto/r4/core/resources:observation_cc_proto",
-        "//proto/stu3:profile_config_cc_proto",
         "//proto/stu3:resources_cc_proto",
         "//testdata/r4/profiles:test_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
