--- a/cc/google/fhir/seqex/BUILD
+++ b/cc/google/fhir/seqex/BUILD
@@ -17,11 +17,11 @@ cc_library(
         "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/systems",
         "//proto:annotations_cc_proto",
+        "//proto:version_config_cc_proto",
         "//proto/stu3:codes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
         "//proto/stu3:resources_cc_proto",
-        "//proto/stu3:version_config_cc_proto",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
