--- a/java/BUILD
+++ b/java/BUILD
@@ -35,8 +35,8 @@ java_library(
         ":structure_definition_transformer",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
-        "//proto/stu3:profile_config_java_proto",
         "//proto:annotations_java_proto",
+        "//proto:profile_config_java_proto",
         "//proto:protogenerator_annotations_java_proto",
         "//proto/r4/core:codes_java_proto",
         "//proto/r4/core:datatypes_java_proto",
@@ -628,8 +628,8 @@ java_test(
     deps = [
         ":json_format",
         ":protogen",
-        "//proto/stu3:profile_config_java_proto",
         "//proto:annotations_java_proto",
+        "//proto:profile_config_java_proto",
         "//proto/r4/core:datatypes_java_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
         "//proto/r4/core/resources:structure_definition_java_proto",
@@ -714,8 +714,8 @@ java_binary(
         ":json_format",
         ":protogen",
         ":structure_definition_transformer",
-        "//proto/stu3:profile_config_java_proto",
         "//proto:annotations_java_proto",
+        "//proto:profile_config_java_proto",
         "//proto/r4/core:codes_java_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
         "//proto/r4/core/resources:structure_definition_java_proto",
@@ -738,7 +738,7 @@ java_test(
     deps = [
         ":json_format",
         ":protogen",
-        "//proto/stu3:profile_config_java_proto",
+        "//proto:profile_config_java_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
         "//proto/r4/core/resources:structure_definition_java_proto",
         "@com_google_protobuf//:protobuf_java",
@@ -756,8 +756,8 @@ java_binary(
         ":file_utils",
         ":json_format",
         ":protogen",
-        "//proto/stu3:profile_config_java_proto",
         "//proto:annotations_java_proto",
+        "//proto:profile_config_java_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
         "//proto/r4/core/resources:structure_definition_java_proto",
         "@maven//:com_beust_jcommander",
@@ -772,8 +772,8 @@ java_binary(
     deps = [
         ":json_format",
         ":protogen",
-        "//proto/stu3:profile_config_java_proto",
         "//proto:annotations_java_proto",
+        "//proto:profile_config_java_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
         "//proto/r4/core/resources:structure_definition_java_proto",
         "@com_google_protobuf//:protobuf_java",
