Adds handling to fhir_path.cc of timezones of the form "(+/-)XX:XX", which is actually the most common (true FHIR) form.
Enables fhir_path testing on validating json_format parse methods

Enables json_format parse validation on json_format tests to greatly increase test coverage of validation

PiperOrigin-RevId: 281753910

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -41,6 +41,7 @@ cc_library(
         ":fhir_path_lexer",
         "//cc/google/fhir:annotations",
         "//cc/google/fhir:proto_util",
+        "//cc/google/fhir:util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto/r4/core:datatypes_cc_proto",
