Support comparison of primitives with different proto types and the use of the logical primitive "value" field in expressions
PiperOrigin-RevId: 282372486

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -40,6 +40,7 @@ cc_library(
         ":fhir_path_grammar",
         ":fhir_path_lexer",
         "//cc/google/fhir:annotations",
+        "//cc/google/fhir:primitive_wrapper",
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir:util",
         "//cc/google/fhir/status",
