--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -50,6 +50,7 @@ cc_library(
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
+        "@com_google_absl//absl/types:optional",
         "@com_google_protobuf//:protobuf",
         "@org_tensorflow//tensorflow/core:lib",
     ],
