Add support for the union operator.
Also, allow an invocation expression to work, even if the expression does not have a defined type at complication time. This situation could happen if the expression represents a collection with multiple objects of different types, which ExpressionNode isn't currently able to handle.

PiperOrigin-RevId: 286626308

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -66,6 +66,7 @@ cc_test(
     features = ["-use_header_modules"],  # Incompatible with -fexceptions.
     deps = [
         ":fhir_path",
+        "//cc/google/fhir:proto_util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/testutil:proto_matchers",
         "//proto/r4/core:datatypes_cc_proto",
