Makes profiles_lib.h handle profiling ContainedResource instances where a profiled resource present in the profiled ContainedResource is converted to a ContainedResource that does not contain that profile.  In this case, it will convert to a base resource field for the type if found.
PiperOrigin-RevId: 287919251

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -108,6 +108,7 @@ cc_library(
         ":annotations",
         ":codeable_concepts",
         ":codes",
+        ":core_resource_registry",
         ":extensions",
         ":proto_util",
         ":resource_validation",
