Modify api to allow more flexible usage of TextTokenizer when generating examples.
PiperOrigin-RevId: 289161790

--- a/py/google/fhir/seqex/BUILD
+++ b/py/google/fhir/seqex/BUILD
@@ -30,6 +30,7 @@ pyx_library(
     ],
     deps = [
         "//cc/google/fhir/seqex:bundle_to_seqex_converter",
+        "//cc/google/fhir/seqex:text_tokenizer",
         "//proto:version_config_cc_proto",
         "//proto/stu3:extensions_cc_proto",
         "//proto/stu3:resources_cc_proto",
