Add unigram, bigram and trigram output options to the default text tokenizer, along with the ability to emit special start and end tokens for each sequence, and the ability to replace numbers by a special numeric token.
PiperOrigin-RevId: 290377472

--- a/cc/google/fhir/seqex/BUILD
+++ b/cc/google/fhir/seqex/BUILD
@@ -1,6 +1,6 @@
 licenses(["notice"])
 
-package(default_visibility = ["//visibility:public"],)
+package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "bundle_to_seqex_converter",
