Refactors transformer logic used to make protogenerator work on versions of the spec other than R4.  This will make generating R5 easier.
PiperOrigin-RevId: 290453556

--- a/java/BUILD
+++ b/java/BUILD
@@ -183,21 +183,14 @@ java_library(
     deps = [
         ":common",
         ":primitive_wrappers",
+        ":proto_gen_transformer",
         ":resource_utils",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
         "//proto/stu3:resources_java_proto",
         "//proto:annotations_java_proto",
-        "//proto/r4/core:codes_java_proto",
         "//proto/r4/core:datatypes_java_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
-        "//proto/r4/core/resources:capability_statement_java_proto",
-        "//proto/r4/core/resources:code_system_java_proto",
-        "//proto/r4/core/resources:compartment_definition_java_proto",
-        "//proto/r4/core/resources:concept_map_java_proto",
-        "//proto/r4/core/resources:operation_definition_java_proto",
-        "//proto/r4/core/resources:structure_definition_java_proto",
-        "//proto/r4/core/resources:value_set_java_proto",
         "@com_google_protobuf//:protobuf_java",
         "@maven//:com_google_code_gson_gson",
         "@maven//:com_google_guava_guava",
@@ -710,6 +703,7 @@ java_test(
     deps = [
         ":json_format",
         ":protogen",
+        "//proto:annotations_java_proto",
         "//proto:profile_config_java_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
         "//proto/r4/core/resources:structure_definition_java_proto",
@@ -728,7 +722,6 @@ java_binary(
         ":file_utils",
         ":json_format",
         ":protogen",
-        "//proto:annotations_java_proto",
         "//proto:profile_config_java_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
         "//proto/r4/core/resources:structure_definition_java_proto",
@@ -751,5 +744,46 @@ java_binary(
         "@com_google_protobuf//:protobuf_java",
         "@maven//:com_beust_jcommander",
         "@maven//:com_google_guava_guava",
+    ],
+)
+
+java_library(
+    name = "proto_gen_transformer",
+    srcs = ["src/main/java/com/google/fhir/common/ProtoGenTransformer.java"],
+    deps = [
+        "//proto/r4/core:codes_java_proto",
+        "//proto/r4/core:datatypes_java_proto",
+        "//proto/r4/core/resources:capability_statement_java_proto",
+        "//proto/r4/core/resources:code_system_java_proto",
+        "//proto/r4/core/resources:compartment_definition_java_proto",
+        "//proto/r4/core/resources:concept_map_java_proto",
+        "//proto/r4/core/resources:operation_definition_java_proto",
+        "//proto/r4/core/resources:structure_definition_java_proto",
+        "//proto/r4/core/resources:value_set_java_proto",
+        "@com_google_protobuf//:protobuf_java",
+        "@maven//:com_google_code_gson_gson",
+        "@maven//:com_google_guava_guava",
+    ],
+)
+
+java_test(
+    name = "ProtoGenTransformerTest",
+    srcs = ["src/test/java/com/google/fhir/common/ProtoGenTransformerTest.java"],
+    data = [
+        "//spec:fhir_stu3_package.zip",
+        "//testdata/protogentransformer:json",
+    ],
+    test_class = "com.google.fhir.common.ProtoGenTransformerTest",
+    deps = [
+        ":json_format",
+        ":proto_gen_transformer",
+        ":protogen",
+        ":resource_validator",
+        "//proto/r4/core:datatypes_java_proto",
+        "//proto/r4/core/resources:structure_definition_java_proto",
+        "@bazel_tools//tools/java/runfiles",
+        "@maven//:com_google_guava_guava",
+        "@maven//:com_google_truth_truth",
+        "@maven//:junit_junit",
     ],
 )
