Makes fhir_path_test use a single FHIR version, R4, since STU3 is not yet well supported.  A future CL can add a dedicated STU3 test.
PiperOrigin-RevId: 292029108

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -69,13 +69,14 @@ cc_test(
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/testutil:proto_matchers",
+        "//proto/r4:uscore_cc_proto",
+        "//proto/r4:uscore_codes_cc_proto",
+        "//proto/r4/core:codes_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
         "//proto/r4/core/resources:encounter_cc_proto",
-        "//proto/stu3:codes_cc_proto",
-        "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:resources_cc_proto",
-        "//proto/stu3:uscore_cc_proto",
-        "//proto/stu3:uscore_codes_cc_proto",
+        "//proto/r4/core/resources:observation_cc_proto",
+        "//proto/r4/core/resources:structure_definition_cc_proto",
+        "//proto/r4/core/resources:value_set_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
         "@com_google_googletest//:gtest_main",
